# CHANGELOG
# ---
# * Add support for PayPal API signatures [Benjamin Curtis, cody]
#
# * Add payment gateway Viaklix [Sal Scotto, cody]
#
# * Add Australian payment gateway NetRegistry [George Ogata]
#
# * Take order email from the options hash instead of the address for CyberSource [cody]
#
# * Use an array for LineItems when calculating tax in CyberSource gateway [cody]
#
# * Add CyberSource gateway [Matt Margolis]
#
# * Sanitize Protx order id [cody]
#
# * Fix support for electron in Protx [cody]
#
# * Add support for Protx [shiftx, cody]
#
# * Use undef_method with a single argument in SecurePay to prevent JRuby from choking on it. [jonathan.l.bartlett]
#
# * Default address_override to 0 for PayPal Website Payments Standard payments. [cody]
#
# * Enhance credit card error messages [manfred]
#
# * Use HashWithIndifferentAccess for CreditCard for compatibility with Rails applications [michael.j.mangino]
#
# * Fix nil exception when no response reason text is found in Authorize.net [cody]
#
# * Add support for PayJunction [Matt Sanders] 
#
# * Change billing_address to shipping_address in PayPal Integration helper, as billing_address was incorrect.  Addresses passed to billing_address for the PayPal helper will no longer be added to the form. This will break existing code, as the address will not be passed.
#
# * Remove switch patterns from card detection that were eliminated on July 1, 2007 [cody]
#
# * Format the issue number in Payflow requests to always be 2 digits [cody]
#
# * Move application_id to Gateway and Helper class respectively [cody]
#
# * Improve TrustCommerce documentation [cody]
#
# * Add credit to Payflow [cody]
#
# * Add support for the Plug 'N Pay gateway [ryan.norbauer, cody]
#
# * Add support for ItemTotal, Shipping, Handling, and Tax amounts in the PayPal Express and PayPal gateways [baldwindavid, cody]
#
# * Add page customization options to the PaypalExpress, and PayflowExpress gateways [ cpjolicoeur, cody]
#