@@ -39,6 +39,10 @@ NetRegistry Gateway
 
 * Originally contributed by George Ogata (mailto: george.ogata@gmail.com)
 
-Viaklix Gateway
+Viaklix Gateway (Sep 3, 2007)
 
 * Originally contributed by Sal Scotto
+
+Braintree Gateway (Sep 4, 2007)
+
+* Originally contributed by Michael J. Mangino
