@@ -1,32 +1,3 @@
 require 'active_merchant/billing/gateway'
-require 'active_merchant/billing/gateways/bogus'
-require 'active_merchant/billing/gateways/payment_express'
-require 'active_merchant/billing/gateways/psigate'
-require 'active_merchant/billing/gateways/authorize_net'
-require 'active_merchant/billing/gateways/moneris'
-require 'active_merchant/billing/gateways/trust_commerce'
-require 'active_merchant/billing/gateways/linkpoint'
-require 'active_merchant/billing/gateways/paypal'
-require 'active_merchant/billing/gateways/paypal_express'
-require 'active_merchant/billing/gateways/eway'
-require 'active_merchant/billing/gateways/usa_epay'
-require 'active_merchant/billing/gateways/payflow'
-require 'active_merchant/billing/gateways/payflow_express'
-require 'active_merchant/billing/gateways/payflow_uk'
-require 'active_merchant/billing/gateways/payflow_express_uk'
-require 'active_merchant/billing/gateways/pay_junction'
-require 'active_merchant/billing/gateways/exact'
-require 'active_merchant/billing/gateways/data_cash'
-require 'active_merchant/billing/gateways/card_stream'
-require 'active_merchant/billing/gateways/psl_card'
-require 'active_merchant/billing/gateways/quickpay'
-require 'active_merchant/billing/gateways/realex'
-require 'active_merchant/billing/gateways/secure_pay'
-require 'active_merchant/billing/gateways/trans_first'
-require 'active_merchant/billing/gateways/verifi'
-require 'active_merchant/billing/gateways/plugnpay'
-require 'active_merchant/billing/gateways/protx'
-require 'active_merchant/billing/gateways/cyber_source'
-require 'active_merchant/billing/gateways/net_registry'
-require 'active_merchant/billing/gateways/viaklix'
 
+Dir[File.dirname(__FILE__) + '/gateways/*.rb'].each{|g| require g}
